server/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mbox-rag-server
  name: mbox-rag-server
  labels:
    app: mbox-rag-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mbox-rag-server
  template:
    metadata:
      labels:
        app: mbox-rag-server
    spec:
      containers:
        - name: mbox-rag-server
          image: quay.io/arkmq-org/mbox-rag-server:latest
          ports:
            - containerPort: 8000
              protocol: TCP
          args: ['run', 'main.py']
          command:
            - fastapi
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
          volumeMounts:
            - mountPath: /server/db
              name: mbox-rag-server-db-storage
            - mountPath: /server/mails
              name: mbox-rag-server-mail-storage
      volumes:
        - name: mbox-rag-server-db-storage
          persistentVolumeClaim:
            claimName: mbox-rag-server-db-storage-claim
        - name: mbox-rag-server-mail-storage
          persistentVolumeClaim:
            claimName: mbox-rag-server-mail-storage-claim
      restartPolicy: Always
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
